--- a/Dashboard/Areas/SeasonEntity/Views/Season/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/Season/CreateOrEdit.cshtml
@@ -145,7 +145,7 @@
                                                                 <div class="col-md-3 col-12">
                                                                     <div class="mb-1">
                                                                         <label class="form-label">@Localizer.Get("Deadline")</label>
-                                                                        <input asp-for="GameWeaks[i].Deadline" class="form-control" placeholder="@Localizer.Get("Enter") @Localizer.Get("Deadline")">
+                                                                        <input type="datetime-local" asp-for="GameWeaks[i].Deadline" class="form-control" placeholder="@Localizer.Get("Enter") @Localizer.Get("Deadline")">
                                                                     </div>
                                                                 </div>
 
