--- a/Dashboard/Areas/NotificationEntity/Views/Notification/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/NotificationEntity/Views/Notification/CreateOrEdit.cshtml
@@ -202,7 +202,15 @@
                                                 </select>
                                             </div>
                                         </div>
-
+                                        <div class="col-md-3 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Topic" class="form-label">@Localizer.Get("Topic")</label>
+                                                <select asp-for="Topic" class="form-control">
+                                                    <option value="test">@Localizer.Get("Test")</option>
+                                                    <option value="all">@Localizer.Get("All")</option>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </div>
                                     <hr />
                                     <div class="row">
