--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -114,6 +114,7 @@
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.CountryRanking)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.FavouriteTeamRanking)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.DoubleGameWeak)</th>
+                                                    <th>@Html.DisplayNameFor(model => accountTeamGameWeak.TripleCaptain)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.Top_11)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.TansfarePoints)</th>
                                                 </tr>
@@ -133,6 +134,7 @@
                                                         <td>@item.CountryRanking</td>
                                                         <td>@item.FavouriteTeamRanking</td>
                                                         <td>@item.DoubleGameWeak</td>
+                                                        <td>@item.TripleCaptain</td>
                                                         <td>@item.Top_11</td>
                                                         <td>@item.TansfarePoints</td>
                                                     </tr>
