--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
@@ -95,7 +95,7 @@
 
                                     <dt class="col-sm-4 fw-bolder mb-1">@Localizer.Get("AwayTeam"):</dt>
                                     <dd class="col-sm-8 mb-1">
-                                        <a href="/TeamEntity/Team/Profile/@Model.Fk_Away&Fk_GameWeak=@Model.Fk_GameWeak" target="_blank">@Model.Away.Name</a>
+                                        <a href="/TeamEntity/Team/Profile/@Model.Fk_Away" target="_blank">@Model.Away.Name</a>
 
                                     </dd>
                                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GameWeak):</dt>
